--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <div id="PlayerOneScore">Player 1: 0</div>
         <div id="PlayerTwoScore">Player 2: 0</div>
       </div>
-
+      <div class="message" id="message">Player 1 turn</div>
       <div class="game-play-ground">
         <div class="section" id="playerOne"></div>
         <div class="section ground" id="ground"></div>
         <div class="section" id="playerTwo"></div>
       </div>
 
-      <div class="message" id="message">Player 1's turn</div>
       <button id="drawCardBtn" class="btn">Draw a card</button>
       <button id="restartBtn" class="btn" style="display: none">
         Play Again
